Changed to plausible

--- a/layouts/partials/custom/head-end.html
+++ b/layouts/partials/custom/head-end.html
@@ -1,1 +1,2 @@
-<script data-goatcounter="https://fipv.goatcounter.com/count" async src="/js/goat.js"></script>
+<script defer data-domain="fachinformatikerpruefungsvorbereitung.de" src="https://muninn.lna-dev.net/js/script.file-downloads.hash.outbound-links.js"></script>
+<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
